<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFormula">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:background="@color/purple_500"

        tools:layout_editor_absoluteX="1dp"

        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Holl_diametr" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextNumberDecimal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Holl_deep" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="70dp"
        android:layout_marginVertical="370dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:text="@string/Waste" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="500dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Button" />
    </LinearLayout>

</RelativeLayout>